# libffi

./: CMakeLists.txt
include/: fficonfig.h.win32.in
